--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    width: 80%;
+}
+
 .container {
-    width: 100%;
+    width: 125%;
     height: auto;
 
 }
@@ -85,7 +89,7 @@
 }
 
 .photo-text {
-    width: 350px;
+    width: 300px;
     height: 20px;
     font-size: 23px;
     position: absolute;
@@ -94,7 +98,7 @@
 }
 
 .food-text {
-    width: 400px;
+    width: 350px;
     height: 20px;
     font-size: 20px;
     position: absolute;
